# assignment-Levontin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lib/: constants.py  main.py  utils.py
notebooks/: assignment.ipynb  clean_assignment.ipynb
output_data/products_json/: products.json
