[tool.poetry]
name = "assignment-levontin"
version = "0.1.0"
description = ""
authors = ["Yona <yonabitton@gmail.com>"]
readme = "README.md"


packages = [
  { include = "lib" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.47.1,<2.0.0"
pandas = ">=2.3.1,<3.0.0"
matplotlib = ">=3.7"
scikit-learn = "~1.3"
plotly = "^5.18"
loguru = "^0.7"
notebook = "^7.5.0"
jupyterlab = "^4.5.0"
seaborn = ">=0.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.1.6"
ipykernel = "^6.27.1"
nbstripout = "^0.6.1"
codespell = "^2.2.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sqlfluff = "^2.3.5"
